--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/libraries/break_infinity.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/about.css">
+    <link rel="stylesheet" type="text/css" href="css/Default.css">
     <link rel="icon" href="icon.png">
     <title>Color Game Remake</title>
   </head>
