added some hyperlinks

--- a/changelog.html
+++ b/changelog.html
@@ -2,30 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
     <title>Changelog</title>
   </head>
   <body>
     <h1>Changelog:</h1>
-    <h2>v1.0.0 - Lights!</h2>
-    <ul>
-      <li>1 New Prestige Layer - Lights</li>
-      <li>New mechanics</li>
-      <li>10+ new upgrades</li>
-      <li>Stats</li>
-      <li>Refined UI</li>
-    </ul>
-    <h2>v0.1.0</h2>
-    <ul>
-      <li>1 new bar</li>
-      <li>4 new upgrades</li>
-      <li>Better performance</li>
-    </ul>
+    Nothing here yet :(
+    <!-- <h2>v0.1.0</h2>
+    Initial release
   </body>
   <style>
     *{
-      background-color: black;
-      color: white;
-      font-family: arial;
+      font-family: 'Inconsolata', monospace;
+      background-color: #E8F1F2
     }
-  </style>
+  </style> -->
 </html>
