--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/about.css">
     <link rel="stylesheet" type="text/css" href="css/Default.css">
     <link rel="icon" href="icon.png">
-    <title>Color Game Remake</title>
+    <title>Color Idle</title>
   </head>
   <body>
     <div id="app">
@@ -321,6 +321,9 @@
           </div>
           <br>
           Game autosaves every 15 seconds
+          <br>
+          <a href="https://discord.com/invite/N8MuKMz" target="_blank">Discord server</a> |
+          <a href="changelog.html" target="_blank">Changelog</a>
           <input id="options-export-field" style="display: none;"></input>
         </div>
       </div>
