--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,12 @@
     <h1>Changelog:</h1>
     Nothing here yet :(
     <!-- <h2>v0.1.0</h2>
-    Initial release
+    Initial release--->
   </body>
   <style>
     *{
       font-family: 'Inconsolata', monospace;
       background-color: #E8F1F2
     }
-  </style> -->
+  </style>
 </html>
