--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Color Idle rewritten</title>
+    <title>Color Idle</title>
+    <link rel="icon" href="./icon.png">
   </head>
   <body>
     <div id="app"></div>
