--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script src="js/libraries/jquery-3.4.1.js"></script>
+    <script src="js/libraries/jquery-3.7.1.min.js"></script>
     <script src="js/libraries/vue.min.js"></script>
     <script src="js/libraries/break_infinity.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
